force-app/main/default/objects/Interposi_o_Legal__c/Interposi_o_Legal__c.object-meta.xml
<CustomObject>
    <label>Interposição Legal</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>N° da Interposição</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interposições Legais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>