force-app/main/default/objects/Interposi_o_Legal__c/fields/Data_do_envio__c.field-meta.xml
<CustomField>
    <fullName>Data_do_envio__c</fullName>
    <label>Data do envio</label>
    <type>DateTime</type>
</CustomField>