force-app/main/default/objects/Interposi_o_Legal__c/fields/Data_do_parecer__c.field-meta.xml
<CustomField>
    <fullName>Data_do_parecer__c</fullName>
    <label>Data do parecer</label>
    <type>Date</type>
</CustomField>