force-app/main/default/objects/Interposi_o_Legal__c/fields/Data_limite_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Data_limite_de_envio__c</fullName>
    <label>Data limite de envio</label>
    <type>DateTime</type>
</CustomField>