force-app/main/default/objects/Interposi_o_Legal__c/fields/Especialista_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Especialista_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Especialista Relacionado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interposi_es_Legais</relationshipName>
    <type>Lookup</type>
</CustomField>