force-app/main/default/objects/Interposi_o_Legal__c/fields/Linhas_de_produtos__c.field-meta.xml
<CustomField>
    <fullName>Linhas_de_produtos__c</fullName>
    <label>Linhas de produtos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anestesia</fullName>
            </value>
            <value>
                <fullName>Apoio a Mobilidade</fullName>
            </value>
            <value>
                <fullName>Aspirador de Secreção</fullName>
            </value>
            <value>
                <fullName>Berço Aquecido</fullName>
            </value>
            <value>
                <fullName>BIPAP</fullName>
            </value>
            <value>
                <fullName>Bomba de Infusão</fullName>
            </value>
            <value>
                <fullName>Câmara de Conservação</fullName>
            </value>
            <value>
                <fullName>Cardioversor/Desfibrilador</fullName>
            </value>
            <value>
                <fullName>Concentrador</fullName>
            </value>
            <value>
                <fullName>CPAP</fullName>
            </value>
            <value>
                <fullName>Foco Cirúrgico</fullName>
            </value>
            <value>
                <fullName>Fototerapia</fullName>
            </value>
            <value>
                <fullName>IMAGEM RAIO-X</fullName>
            </value>
            <value>
                <fullName>Incubadora</fullName>
            </value>
            <value>
                <fullName>Mesa Cirúrgica</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>OPME</fullName>
            </value>
            <value>
                <fullName>Reanimador</fullName>
            </value>
            <value>
                <fullName>Ultrassom</fullName>
            </value>
            <value>
                <fullName>Ventilação</fullName>
            </value>
            <value>
                <fullName>Vídeo Cirurgia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>