force-app/main/default/objects/Interposi_o_Legal__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Produto do concorrente não atende</fullName>
            </value>
            <value>
                <fullName>Concorrente com documentação errada</fullName>
            </value>
            <value>
                <fullName>Inabilitação imprópria</fullName>
            </value>
            <value>
                <fullName>Melhoria de Termo de Referência</fullName>
            </value>
            <value>
                <fullName>Descritivo direcionado</fullName>
            </value>
            <value>
                <fullName>Valor inexequível</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>