force-app/main/default/objects/Interposi_o_Legal__c/fields/Oportunidade_relacionada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_relacionada__c</fullName>
    <label>Oportunidade relacionada</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Interposições Legais</relationshipLabel>
    <relationshipName>Interposi_es_Legais</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>