force-app/main/default/objects/Interposi_o_Legal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Aguardando Parecer</fullName>
            </value>
            <value>
                <fullName>Parecer Favorável</fullName>
            </value>
            <value>
                <fullName>Parecer Parcial Favorável</fullName>
            </value>
            <value>
                <fullName>Parecer Desfavorável</fullName>
            </value>
            <value>
                <fullName>Perdido por Prazo</fullName>
            </value>
            <value>
                <fullName>Não enviado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>