force-app/main/default/objects/Interposi_o_Legal__c/fields/Status_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Status_de_envio__c</fullName>
    <formula>&quot;teste&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status de envio</label>
    <type>Text</type>
</CustomField>