force-app/main/default/objects/Interposi_o_Legal__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub. Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando Especialista</fullName>
            </value>
            <value>
                <fullName>Aguardando Jurídico</fullName>
            </value>
            <value>
                <fullName>Aguardando Envio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>