force-app/main/default/objects/Interposi_o_Legal__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Esclarecimento</fullName>
            </value>
            <value>
                <fullName>Impugnação</fullName>
            </value>
            <value>
                <fullName>Recurso</fullName>
            </value>
            <value>
                <fullName>Reconsideração Administrativa</fullName>
            </value>
            <value>
                <fullName>Mandato</fullName>
            </value>
            <value>
                <fullName>Contrarrazões de recurso</fullName>
                <isActive>false</isActive>
                <label>Contrarrazões de recurso</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>