force-app/main/default/objects/Interposi_o_Legal__c/validationRules/Data_do_parecer.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_do_parecer</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(Status__c) = &apos;Parecer Favorável&apos;  || TEXT(Status__c) = &apos;Parecer Desfavorável&apos;)  &amp;&amp;  Data_do_parecer__c  = null</errorConditionFormula>
    <errorMessage>Data do parecer obrigatória para esse status.</errorMessage>
</ValidationRule>