force-app/main/default/objects/Interposi_o_Legal__c/validationRules/Data_limite_para_esclarescimento.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_limite_para_esclarescimento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
!$User.Ignorar_erros__c,
(TEXT(Tipo__c) == &apos;Esclarescimento&apos;),
(NOW() &gt; Oportunidade_relacionada__r.data_limite_esclarescimento__c)
)</errorConditionFormula>
    <errorMessage>O prazo limite para esclarescimento expirou.</errorMessage>
</ValidationRule>