force-app/main/default/objects/Interposi_o_Legal__c/validationRules/Data_limite_para_impugnacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_limite_para_impugnacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
!$User.Ignorar_erros__c,
(TEXT(Tipo__c) == &apos;Impugnação&apos;),
(NOW() &gt; Oportunidade_relacionada__r.Data_limite_para_impugnacao__c)
)</errorConditionFormula>
    <errorMessage>O prazo limite para impugnação expirou.</errorMessage>
</ValidationRule>